--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,27 @@
-
 ---
-version: '2'
+version: "2"
 services:
-
   pcd:
     container_name: gripmock
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     ports:
       - 4770:4770
       - 4771:4771
     volumes:
-      - grpc-protos:/proto
-    command: ["/proto/bnd_service_productdata_enums.proto", "/proto/bnd_service_productdata_generic_bank_product.proto"]
+      - F:\Github_Project\gripmock\grpc-protos:/proto
+    command:
+      [
+        "--stub=/proto/grpcStubs",
+        "/proto/bnd_service_productdata_enums.proto",
+        "/proto/bnd_service_productdata_generic_bank_product.proto",
+      ]
 
 volumes:
   grpc-protos:
     driver: local
     driver_opts:
-      type: 'none'
-      o: 'bind'
+      type: "none"
+      o: "bind"
       device: grpc-protos
